--- a/mqtt/src/main/resources/application.properties
+++ b/mqtt/src/main/resources/application.properties
@@ -19,6 +19,7 @@ mqtt.username=user1
 mqtt.password=123
 mqtt.host=localhost
 mqtt.port=1883
+mqtt.qos=1
 
 socketio.host=localhost
 socketio.port=9092
